update: support switch use multimodal prompt API

--- a/apps/iOS/MNNLLMChat/MNNLLMiOS/Localizable.xcstrings
+++ b/apps/iOS/MNNLLMChat/MNNLLMiOS/Localizable.xcstrings
@@ -369,6 +369,9 @@
         }
       }
     },
+    "Default Multimodal Prompt" : {
+
+    },
     "Delete" : {
       "localizations" : {
         "zh-Hans" : {
@@ -742,6 +745,9 @@
           }
         }
       }
+    },
+    "Multimodal Inputs" : {
+
     },
     "My Model" : {
       "comment" : "我的模型标签",
@@ -1640,6 +1646,9 @@
         }
       }
     },
+    "Use Multimodal Prompt API" : {
+
+    },
     "User Guide" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1650,6 +1659,12 @@
           }
         }
       }
+    },
+    "Video Frames" : {
+
+    },
+    "video.frameExtractionFailed" : {
+      "comment" : "Warning shown when a pure video input cannot provide frames."
     },
     "WelcomeSceneText" : {
       "localizations" : {
