--- a/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="downloaded_update_available"> %1$s (Update Available)</string>
     <string name="local_click_to_chat"> %1$s %2$s</string>
     <string name="download_failed_click_retry">Download failed: %1$s, click to retry</string>
-    <string name="downloading_progress">%1$s | %2$s</string>"
+    <string name="downloading_progress">%1$s | %2$s</string>
     <string name="downloading_paused">Paused: %1$.2f%%</string>
     <string name="config_file_not_found">Model config file not found: %1$s</string>
     <string name="model_hello_prompt">Is there anything I can help you with?</string>
@@ -21,7 +21,7 @@
     <string name="start_download">Start Download</string>
     <string name="download_preparing">Download preparing</string>
     <string name="downloading_please_wait">Downloading please wait</string>
-    <string name="loading_failed_click_tor_retry">Loading failed: %1$s, click tor retry</string>
+    <string name="loading_failed_click_tor_retry">Loading failed: %1$s, click to retry</string>
     <string name="input_messages">Input messages here</string>
     <string name="send">send</string>
     <string name="raise_issue">Report an issue</string>
@@ -32,7 +32,7 @@
     <string name="history_cleard">history cleared</string>
     <string name="press_to_chat">Press To Talk</string>
     <string name="start_new_chat">Start New Conversation</string>
-    <string name="new_conversation_started">New converstaion started</string>
+    <string name="new_conversation_started">New conversation started</string>
     <string name="take_photo">Photo</string>
     <string name="choose_image">Image</string>
     <string name="select_audio">Audio(wav)</string>
@@ -207,6 +207,7 @@
     <string name="server_running_at_template">Server running at %1$s:%2$d</string>
     <string name="close">Close</string>
     <string name="back">Back</string>
+    <string name="share_image">Share Image</string>
     <string name="share_benchmark_result">Share Benchmark Result</string>
     
     <string name="api_auth_enabled">Enable API Key Authentication</string>
@@ -250,7 +251,7 @@
     <string name="regenerate">Regenerate</string>
     <string name="copy_audio_info">Copy Audio Info</string>
     <string name="report_crash">Report Crash</string>
-    <string name="model_not_found">Model not foud %1$s</string>
+    <string name="model_not_found">Model not found %1$s</string>
     <string name="out_audio">Output Audio</string>
     <string name="audio_output_confirm">Audio Output is very slow for now, Would you like to continue anyway?</string>
     <string name="confirm_delete_model_title">Confirm Deletion</string>
