feat: add support for Sana Diffusion style transfer model
# Conflicts:
#	apps/iOS/MNNLLMChat/MNNLLMiOS/Chat/ViewModels/LLMChatViewModel.swift
#	apps/iOS/MNNLLMChat/MNNLLMiOS/Chat/Views/LLMChatView.swift
#	apps/iOS/MNNLLMChat/MNNLLMiOS/Chat/Views/ModelSettingsView.swift
#	apps/iOS/MNNLLMChat/MNNLLMiOS/Localizable.xcstrings
#	apps/iOS/MNNLLMChat/MNNLLMiOS/MainTab/ModelList/Models/ModelListViewModel.swift
#	apps/iOS/MNNLLMChat/MNNLLMiOS/Service/Util/AssetExtractor.swift

--- a/apps/iOS/MNNLLMChat/MNNLLMiOS/Localizable.xcstrings
+++ b/apps/iOS/MNNLLMChat/MNNLLMiOS/Localizable.xcstrings
@@ -720,6 +720,9 @@
         }
       }
     },
+    "Model Type" : {
+
+    },
     "ModelLoadingFailText" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -901,6 +904,9 @@
         }
       }
     },
+    "Please select an image for style transfer." : {
+
+    },
     "Powered By MNN" : {
 
     },
@@ -1002,6 +1008,9 @@
           }
         }
       }
+    },
+    "Sana Style Transfer" : {
+
     },
     "Search models..." : {
       "localizations" : {
@@ -1286,6 +1295,9 @@
         }
       }
     },
+    "Starting style transfer..." : {
+
+    },
     "Status Update" : {
       "localizations" : {
         "zh-Hans" : {
@@ -1316,6 +1328,15 @@
           }
         }
       }
+    },
+    "Style transfer completed!" : {
+
+    },
+    "Style transfer failed." : {
+
+    },
+    "Style Transfer Settings" : {
+
     },
     "Success" : {
       "comment" : "Alert title for cache cleared",
@@ -1657,6 +1678,9 @@
         }
       }
     },
+    "Unsupported image format. Please use JPG/JPEG images for style transfer." : {
+
+    },
     "Use HuggingFace to download" : {
       "localizations" : {
         "zh-Hans" : {
@@ -1698,6 +1722,7 @@
       }
     },
     "Use Multimodal Prompt API" : {
+      "extractionState" : "stale",
       "localizations" : {
         "zh-Hans" : {
           "stringUnit" : {
