--- a/apps/Android/MnnLlmChat/app/src/main/res/values-zh/strings.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values-zh/strings.xml
@@ -72,6 +72,12 @@
     <string name="select_text">选择文本</string>
     <string name="copy_success">复制成功</string>
     <string name="debug_message_copied">已经复制调试信息到粘贴板，请在github 上提交Issue</string>
+    <string name="debug_test_crashlytics_non_fatal">测试 Crashlytics（非致命）</string>
+    <string name="debug_test_crashlytics_fatal">测试 Crashlytics（致命崩溃）</string>
+    <string name="debug_test_crashlytics_non_fatal_sent">已发送 Crashlytics 非致命事件</string>
+    <string name="debug_test_crashlytics_fatal_confirm_title">触发致命崩溃测试</string>
+    <string name="debug_test_crashlytics_fatal_confirm_message">该操作会立即让应用崩溃用于 Crashlytics 验证，是否继续？</string>
+    <string name="debug_test_crashlytics_fatal_confirm_action">立即崩溃</string>
     <string name="use_model_scope_download">使用 ModelScope 下载</string>
     <string name="clear_mmap_cache">清理 mmap 缓存</string>
     <string name="use_mmap">使用 mmap</string>
