--- a/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
@@ -606,13 +606,20 @@
     <string name="continue_open">Continue Open</string>
     
     <!-- Privacy Policy Strings -->
-    <string name="privacy_policy_title">Privacy Policy Agreement</string>
-    <string name="privacy_policy_content">Welcome to MNN Chat! Before using our application, please read and agree to our Privacy Policy.\n\nWe are committed to protecting your privacy and personal information. This application may collect and process certain data to provide you with better services.\n\nBy using this application, you agree to:\n• Allow the application to collect necessary data for functionality\n• Understand that your data may be processed locally on your device\n• Accept our terms of service and privacy practices\n\nIf you do not agree to these terms, please do not use this application.\n\nFor more detailed information about our privacy practices, please contact us through our official channels.</string>
-    <string name="privacy_policy_agree">I have read and agree to the Privacy Policy</string>
-    <string name="privacy_policy_agree_button">Agree and Continue</string>
-    <string name="privacy_policy_disagree">Disagree</string>
+    <string name="privacy_policy_title">Crash Data Consent</string>
+    <string name="privacy_policy_content">To improve app stability, MNN Chat can collect crash and diagnostic data through Firebase Crashlytics.\n\nWe only use this data to locate and fix crashes, improve reliability, and accelerate iteration.\n\nYou can choose whether to enable this collection:\n• Agree: allow crash and diagnostic reporting\n• Disagree: no crash data is uploaded\n\nYour choice will not affect core app usage.</string>
+    <string name="privacy_policy_agree">I understand and agree to crash data collection for stability improvements</string>
+    <string name="privacy_policy_agree_button">Agree and Enable</string>
+    <string name="privacy_policy_disagree">Disagree and Continue</string>
     <string name="privacy_policy_required">You must agree to the Privacy Policy to use this application</string>
     <string name="privacy_policy_exit_message">You have chosen not to agree to the Privacy Policy. The application will now exit.</string>
+    <string name="privacy_policy_consent_enabled">Crash reporting enabled. Only crash/diagnostic data will be collected.</string>
+    <string name="privacy_policy_consent_disabled">Crash reporting disabled. No crash data will be uploaded.</string>
+    <string name="crash_diagnostics_enabled_title">Crash and Diagnostics Data</string>
+    <string name="crash_diagnostics_enabled_summary">Only necessary crash and diagnostics data is collected to improve stability.</string>
+    <string name="crash_diagnostics_disable_title">Turn Off Crash Diagnostics?</string>
+    <string name="crash_diagnostics_disable_confirm_message">To improve stability, we only collect necessary diagnostics data. Confirm turning this off?</string>
+    <string name="crash_diagnostics_disable_confirm_action">Turn Off</string>
     <string name="loading_models">Loading models…</string>
     <string name="copying_builtin_models">First install, copying built-in models…</string>
     <string name="builtin">Builtin</string>
