feat: Provides a seamless experience for users on both high-end devices (with good AEC) and older/budget devices (needing software assistance), ensuring clear communication without audio feedback loops.
Key Changes:
Manual Mute: Added a dedicated mute button in the UI, allowing users to manually disable microphone input at any time.
Echo Cancellation Modes:
Hardware AEC (Default): Relies on the device's built-in acoustic echo cancellation (VOICE_COMMUNICATION source).
Auto-Mute Mode (Software Fallback): Designed for devices with poor hardware AEC. In this mode, the microphone is automatically muted while the AI is speaking (TTS playback) and unmuted when it finishes. This prevents the AI from hearing itself and re-triggering the ASR, though it temporarily disables the "Barge-in" capability.
Silence Injection: Updated AsrService to actively fill the audio buffer with zeros when muted (buffer.fill(0)), ensuring absolutely no audio leaks to the ASR engine even if the hardware continues recording.
UI Enhancements: Added a toggle switch to change AEC modes and visual indicators for the current mute state.

--- a/apps/Android/MnnLlmChat/app/src/main/res/values-zh/strings.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values-zh/strings.xml
@@ -366,6 +366,9 @@
     <string name="voice_chat_permission_required">语音聊天需要麦克风权限</string>
     <string name="voice_chat_session_ended">语音聊天会话已结束</string>
     <string name="voice_chat_connecting">正在连接...</string>
+    <string name="mic_mode_hardware">硬件</string>
+    <string name="mic_mode_auto_mute">自动静音</string>
+    <string name="echo_cancellation_mode">回音消除模式</string>
     <string name="initializing">正在初始化</string>
     <string name="voice_chat_stop">停止</string>
     <string name="voice_chat_stopping">正在停止...</string>
